# chat_with_sql_server

./: .gitignore  README.md  app.py  instruction.md  main.ipynb  main.py  pyproject.toml  requirements.txt  run_app.bat
tests/: test_app.py
