[project]
name = "chat-with-sql-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configparser>=7.2.0",
    "gradio==5.49.1",
    "langchain==1.0.7",
    "langchain-community==0.4.1",
    "langchain-core==1.0.5",
    "langchain-openai==1.0.3",
    "openai==2.8.0",
    "pyodbc==5.3.0",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.43",
    "pytest==8.3.3",
]
